# fast-dataanalytics-vietnam

./: .deployment_timestamp  .env.template  .gitignore  .rebuild-trigger  .streamlit_deploy_trigger  .streamlit_version  AI_UX_EVALUATION_REPORT.md  API_SETUP_CHECKLIST.md  AUDIT_SUMMARY_README.md  BAO_CAO_HOTFIX_4.md  BENCHMARK_INTEGRATION_GUIDE.md  BENCHMARK_RESEARCH_MARKETING.md  BENCHMARK_SOURCES_VALIDATION.md  BORDER_REVERT_COMPLETE.md  BUG_FIX_BADGE_COLORS.md  BUG_FIX_DARK_MODE_INCOMPLETE_CSS.md  BUG_FIX_DARK_MODE_ROUND_2.md  BUG_FIX_DARK_MODE_ROUND_3_FINAL.md  BUG_FIX_DUPLICATE_COLUMNS.md  BUG_FIX_HTML_COMMENTS_IN_SVG.md  BUG_FIX_SUMMARY_VI.md  BUG_FIX_THEME_CONSISTENCY.md  BUSINESS_MODEL_CANVAS.md  CHART_VISUALIZATION_RESEARCH.md  CLARITY_SETUP_INSTRUCTIONS.md  COMPLETION_SUMMARY_2025-10-22.md  COMPLIANCE_ANALYSIS.md  COMPREHENSIVE_5STAR_UX_RESEARCH.md  COMPREHENSIVE_DARK_LIGHT_SOLUTION.md  COMPREHENSIVE_FEATURE_TESTING_PROTOCOL.md  COMPREHENSIVE_UAT_3_SEGMENTS.md  CONFLICT_RESOLUTION_SUMMARY.md  CONSENT_FORM.md  CRITICAL_BUG_REPORT_FCR_SLA_SWAP.md  CRITICAL_FIXES_IMPLEMENTATION.md  CRITICAL_FIX_KPI_DISPLAY.md  CRITICAL_LOAD_TIME_ISSUE_2025-10-30.md  CRITICAL_QUALITY_AUDIT_2025-10-23.md  CRITICAL_REVIEW_FINDINGS.md  CURRENT_SESSION_STATE.md  (+226 more)
.streamlit/: config.toml
data/: sample_marketing_data.csv
deep_research/: BAO_CAO_HOAN_THANH_TONG_HOP.md  EXECUTIVE_SUMMARY_FOR_USER.md  EXECUTIVE_SUMMARY_VIETNAMESE.md  IMPLEMENTATION_READY_SUMMARY.md  P0_QUICK_ACTION_GUIDE.md  README.md  RESUMPTION_PROTOCOL.md  WRENAI_COMPREHENSIVE_DEEP_DIVE_ANALYSIS.md  (+4 more)
src/: app.py  (+8 more)
(+100 files in other folders)
