[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.45.0",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "plotly>=6.3.1",
    "pydantic>=2.12.3",
    "pypdf2>=3.0.1",
    "python-pptx>=1.0.2",
    "reportlab>=4.4.4",
    "scikit-learn>=1.7.2",
    "sift-stack-py>=0.9.1",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "xlsxwriter>=3.2.9",
]
